refactor: change config layout and move cli flags to config
Before this commit, things like the path of the logs, and the HTTP
server addr were provided by passing flags to the executable, after
some thinking, I decided to move these flags into the `Config` struct,
so new fields are added to this struct.

While I was at it, I also thought to better layout the struct, and due
to this, a new struct `ConnectionDetails` is created, which will hold
connection details to a database server, or any other server which you
can connect to by using a user, password, port and host. Of course you can
ommit or let some fields unset, since Go will set their zero values anyways.

BREAKING CHANGE: Due to these changes, other parts of the code were changed
to use these new fields/structs.

--- a/config.example.json
+++ b/config.example.json
@@ -1,11 +1,23 @@
 {
-    "rUser": "foo",
-    "rPassword": "bar",
-    "rPort": 6379,
-    "rHost": "127.0.0.1",
+	"redis": {
+		"user": "foo",
+		"password": "bar",
+		"port": 6379,
+		"host": "localhost"
+	},
 
-    "dbUser": "foo",
-    "dbPassword": "bar",
-    "dbPort": 1433,
-    "dbHost": "127.0.0.1"
+	"database": {
+		"user": "foo",
+		"password": "baz",
+		"port": 1433,
+		"host": "localhost"
+	},
+
+    "server": {
+        "addr": ":8080"
+    },
+
+    "logs": {
+        "dir": "./logs"
+    }
 }
